@startuml
class NativeMethods <<static>> {
    + {static} <<extern>> Shell_NotifyIcon(dwMessage:NotifyIconMessage, lpData:NotifyIconData) : bool
    + {static} <<extern>> CreateWindowEx(dwExStyle:int, lpClassName:string, lpWindowName:string, dwStyle:int, x:int, y:int, nWidth:int, nHeight:int, hWndParent:IntPtr, hMenu:IntPtr, hInstance:IntPtr, lpParam:IntPtr) : IntPtr
    + {static} <<extern>> DefWindowProc(hWnd:IntPtr, msg:uint, wParam:IntPtr, lParam:IntPtr) : IntPtr
    + {static} <<extern>> RegisterClass(lpWndClass:WindowClass) : short
    + {static} <<extern>> RegisterWindowMessage(lpString:string) : uint
    + {static} <<extern>> DestroyWindow(hWnd:IntPtr) : bool
    + {static} <<extern>> GetCursorPos(lpPoint:Win32Point) : bool
    + {static} <<extern>> SetForegroundWindow(hWnd:IntPtr) : bool
}
enum WindowMessages {
    WM_MOUSEMOVE= 0x200,
    WM_LBUTTONDOWN= 0x201,
    WM_LBUTTONUP= 0x202,
    WM_LBUTTONDBLCLK= 0x203,
    WM_RBUTTONDOWN= 0x204,
    WM_RBUTTONUP= 0x205,
    WM_RBUTTONDBLCLK= 0x206,
    WM_MBUTTONDOWN= 0x207,
    WM_MBUTTONUP= 0x208,
    WM_MBUTTONDBLCLK= 0x209,
}
enum NotifyIconFlags {
    NIF_MESSAGE= 0x01,
    NIF_ICON= 0x02,
    NIF_TIP= 0x04,
    NIF_STATE= 0x08,
    NIF_INFO= 0x10,
    NIF_GUID= 0x20,
    NIF_REALTIME= 0x40,
    NIF_SHOWTIP= 0x80,
}
enum NotifyIconInfoFlags {
    NIIF_NONE= 0x00,
    NIIF_INFO= 0x01,
    NIIF_WARNING= 0x02,
    NIIF_ERROR= 0x03,
    NIIF_USER= 0x04,
    NIIF_NOSOUND= 0x10,
    NIIF_LARGE_ICON= 0x20,
    NIIF_RESPECT_QUIET_TIME= 0x80,
    NIIF_ICON_MASK= 0x0F,
}
enum NotifyIconMessage {
    NIM_ADD= 0x00,
    NIM_MODIFY= 0x01,
    NIM_DELETE= 0x02,
    NIM_SETFOCUS= 0x03,
    NIM_SETVERSION= 0x04,
}
enum NotifyIconState {
    NIS_HIDDEN= 0x01,
    NIS_SHAREDICON= 0x02,
}
enum NotifyIconVersion {
    NOTIFY_ICON_VERSION= 0x3,
    NOTIFY_ICON_VERSION_4= 0x4,
}
class NotifyIconData <<struct>> {
    + cbSize : uint
    + uID : uint
    + uCallbackMessage : uint
    + szTip : string
    + szInfo : string
    + uTimeoutOrVersion : uint
    + szInfoTitle : string
}
class WindowClass <<struct>> {
    + style : uint
    + cbClsExtra : int
    + cbWndExtra : int
    + lpszMenuName : string
    + lpszClassName : string
}
class Win32Point <<struct>> {
    + X : int
    + Y : int
}
NativeMethods +-- WindowMessages
NativeMethods +-- NotifyIconFlags
NativeMethods +-- NotifyIconInfoFlags
NativeMethods +-- NotifyIconMessage
NativeMethods +-- NotifyIconState
NativeMethods +-- NotifyIconVersion
NativeMethods +-- NotifyIconData
NotifyIconData --> "hWnd" IntPtr
NotifyIconData --> "uFlags" NotifyIconFlags
NotifyIconData --> "hIcon" IntPtr
NotifyIconData --> "dwState" NotifyIconState
NotifyIconData --> "dwStateMask" NotifyIconState
NotifyIconData --> "dwInfoFlags" NotifyIconInfoFlags
NotifyIconData --> "guidItem" Guid
NotifyIconData --> "hBalloonIcon" IntPtr
NativeMethods +-- WindowClass
WindowClass --> "lpfnWndProc" WindowProcedureHandler
WindowClass --> "hInstance" IntPtr
WindowClass --> "hIcon" IntPtr
WindowClass --> "hCursor" IntPtr
WindowClass --> "hbrBackground" IntPtr
NativeMethods +-- Win32Point
@enduml
